<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="#FF4500"  android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:text="@string/button_exit"
        android:id="@+id/button"
        android:textColor="#000000"
        android:background="#FF4500"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/namesurname"
        android:id="@+id/textView"
        android:background="#FF4500"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button"

        android:layout_alignEnd="@+id/button" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button"
        android:layout_below="@+id/textView">
          <TextView
            android:layout_width="wrap_content"
              android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/order1"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/order2"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/order3"
            android:id="@+id/textView4" />

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/shop2"
        android:id="@+id/button4"
        android:textColor="#000000"
        android:background="#FF4500"
        android:layout_alignTop="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/home2"
        android:textColor="#000000"
        android:id="@+id/button5"
        android:background="#FF4500"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>