<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.lpnu.testshop.MainActivity"
>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?android:colorBackground" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfoheader"
            android:textSize="@dimen/header_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.82" >

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <Button
            android:id="@+id/shitbatton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shitbatton"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?android:colorBackground"
        >

        <!--android:background="@android:color/background_dark"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfoheader"
            android:textSize="@dimen/header_text_size"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfo"
            />

    </LinearLayout>

</FrameLayout>
